<resources>
    <string name="app_name">Examinations</string>
    <string name="title_activity_student_home">StudentHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Examinations</string>
    <string name="nav_header_subtitle">Examinations.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="menu_home">Dashboard</string>
    <string name="menu_courses">Courses</string>
    <string name="menu_special">Special</string>
    <string name="menu_account">Account</string>
    <string name="myteaching">MyTeaching</string>
    <string name="portable_working_desk">Portable working desk</string>
    <string name="login">Login</string>
    <string name="forgot_password">forgot password?</string>
    <string name="email">Email</string>
    <string name="portable_academic_office">Portable academic office</string>
    <string name="remember_me">Remember me</string>
    <string name="password">password</string>
    <string name="connecting_teacher_and_student">connecting teacher and student</string>
    <string name="user_name">user name</string>
    <string name="dont_have_an_account_register_here">Dont have an account? Register here</string>
    <string name="my_learning">My Learning</string>
    <string name="an_office_away_from_the_office">An Office Away from the office</string>
    <string name="don_t_have_an_account_contact_admin">DON\'T HAVE AN ACCOUNT? CONTACT ADMIN</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_to_the_world_of_learning">Welcome to the world of learning</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="student_account_details">STUDENT ACCOUNT DETAILS</string>
    <string name="name">Name</string>
    <string name="select_assessment_type">Select Assessment Type</string>
    <string name="select_unit">Select Unit</string>
    <string-array name="units">
        <item>Calculus</item>
        <item>Statistics</item>
        <item>Database Systems</item>
        <item>Compiler Construction</item>
        <item>Mobile Programming</item>
        <item>Internet Programming</item>
        <item>Software Engineering</item>
        <item>Machine Learning</item>
        <item>Networking</item>
        <item>Digital Logic</item>
    </string-array>
    <string-array name="assessment_types">
        <item>Assignment 1</item>
        <item>Assignment 2</item>
        <item>Cat 1</item>
        <item>Cat 2</item>
        <item>Exam</item>
    </string-array>
    <string-array name="semester">
        <item>Semester 1</item>
        <item>Semester 2</item>
    </string-array>
</resources>