<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".leclogin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="49sp"
        android:text="@string/myteaching">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portable_working_desk"
        android:gravity="center"
        >
    </TextView>

    <ImageView
        android:layout_width="342dp"
        android:layout_height="176dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:padding="4dp"
        android:src="@drawable/teacher">

    </ImageView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="0dp"
                android:src="@drawable/mail"></ImageView>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="7dp"
                android:textStyle="italic"
                android:layout_marginEnd="20dp"
                android:hint="@string/email"
                android:textAlignment="center"
                android:inputType="textEmailAddress"
                android:layout_weight="1"
                android:background="@drawable/box">
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="55dp"
                android:layout_height="51dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/password">
            </ImageView>
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginStart="7dp"
                android:textStyle="italic"
                android:layout_marginEnd="20dp"
                android:inputType="textPassword"
                android:hint="@string/password"
                android:textAlignment="center"
                android:background="@drawable/box">
            </EditText>
        </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_marginEnd="41dp"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/material_on_surface_stroke"
        android:fontFamily="sans-serif"
        android:textStyle="italic"
        android:text="@string/forgot_password"
        android:textSize="15sp">

    </Button>

    <Button
        android:id="@+id/Lec_Marks_Enter"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/login"
        android:textSize="20sp">

    </Button>

        <Button
            android:id="@+id/lec_signup"
            android:layout_width="213dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/material_on_surface_stroke"
            android:text="Don't have an account? request one here."
            android:textStyle="italic"></Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/an_office_away_from_the_office"
        android:textAlignment="center"
          android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="125dp"
        android:layout_marginBottom="10dp"
        >

    </TextView>

    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</LinearLayout>