<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/my_learning"
        android:textColor="@color/grey"
        android:textAlignment="center"
        android:textSize="40sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/grey"
        android:text="@string/portable_academic_office"
        android:textSize="15sp">
    </TextView>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="256dp"
        android:layout_height="133dp"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        app:srcCompat="@drawable/student"
        tools:ignore="ContentDescription"
        tools:layout_editor_absoluteX="47dp"
        tools:layout_editor_absoluteY="214dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/mail"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:background="@drawable/box"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="7dp"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailSubject"
                android:textAlignment="center"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            >

            <ImageView
                android:layout_width="55dp"
                android:layout_height="51dp"
                android:layout_marginStart="10dp"
                app:srcCompat="@drawable/password"
                 />

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_gravity="center"
                android:background="@drawable/box"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="4dp"
                android:textAlignment="center"
                android:textStyle="italic"
                 />

        </LinearLayout>

        <CheckBox
            android:id="@+id/checkBox_s"
            android:layout_width="136dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:text="@string/remember_me"
             />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/login"
             />

        <Button
            android:id="@+id/regnew"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/material_on_surface_stroke"
            android:text="@string/dont_have_an_account_register_here"
            android:textAlignment="center"
             />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="159dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/connecting_teacher_and_student">

    </TextView>


</LinearLayout>
    </ScrollView>
</LinearLayout>


