<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    tools:context=".register"
    android:background="@drawable/bg7">

    <TextView
        android:text="Sign Up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="bold"
        android:ems="10"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="40dp"
        android:textSize="40sp"></TextView>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:background="#37876969"
        android:orientation="vertical"
        android:padding="20dp"

        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="238dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="99dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:srcCompat="@drawable/account"
            tools:ignore="ContentDescription"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="214dp" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:ems="10"
            android:layout_marginBottom="20dp"
            android:hint="@string/email"
            android:inputType="textWebEmailAddress"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="241dp">

        </EditText>

        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="362dp" />

        <EditText
            android:id="@+id/confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:ems="10"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="414dp" />

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="116dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/button"
            android:text="@string/register"
            tools:layout_editor_absoluteX="20dp"
            tools:layout_editor_absoluteY="541dp" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome_to_the_world_of_learning"
        android:layout_marginTop="56dp"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textStyle="bold" />

</LinearLayout>
